--- a/sass/resgiter.scss
+++ b/sass/resgiter.scss
@@ -14,13 +14,13 @@
         display: block;
         margin-top: 10px;
     }
-    
 }
 #myform{
     width: 1200px;
     height: auto;
     margin: 0 auto;
     padding-top: 40px;
+    overflow: hidden;
     & .regist{
         width: 100%;
         & h2{
@@ -46,7 +46,7 @@
         }
         & .content-left{
             width: 465px;
-            height: 500px;
+            height: 400px;
             float: left;
             margin-left: 130px;
             & img{
@@ -59,9 +59,9 @@
             & input{
                 width: 260px;
                 height: 35px;
-                margin-bottom: 14px;
+                // margin-bottom: 10px;
             }
-            & span{
+            & #yzm{
                 display: block;
                 float: right;
                 width:120px;
@@ -69,8 +69,51 @@
                 font-size: 20px;
                 text-align: center;
                 line-height: 35px;
-                background: pink;
+                border: 1px solid #919191;
+                font-family:cursive;
+                font-weight: bolder;
+                text-shadow:6px 2px 2px #333;color:#a10000
+            }
+            & .tiaokuan{
+                width: 100%;
+                padding-top: 5px;
+                & #chk{
+                    width: 12px;
+                    height: 12px;
+                }
+                & label a{
+                    text-decoration: none;
+                    color: #a10000;
+                }
+            }
+            & #btn{
+                border: none;
+                width: 100%;
+                height: 45px;
+                background: #9A9A9A;
+                color: #ffffff;
+                cursor: pointer;
+            }
+            & #tip{
+                height: 14px;
+                // background: red;
+                font-size: 12px;
+                color:#acacac;
             }
         }
     }
+}
+.bottom{
+    width: 980px;
+    margin: 0 auto;
+    text-align: center;
+    & p{
+        font-size: 12px;
+        color: #999999;
+    }
+}
+input{
+    outline: none;
+    // border: 1px solid #666;
+    background: #fff;
 }
