--- a/css/list.css
+++ b/css/list.css
@@ -7,7 +7,7 @@ li {
 
 .content {
   width: 1200px;
-  height: 1800px;
+  height: auto;
   margin: 0 auto; }
   .content .top {
     width: 100%; }
@@ -84,13 +84,16 @@ li {
           align-items: center; }
         .content .float .filter .paixu li {
           padding-left: 20px;
-          padding-right: 20px; }
+          padding-right: 20px;
+          cursor: pointer; }
   .content .tbody {
     width: 100%;
     height: auto;
     margin: 0 auto;
-    background: pink;
     margin-top: 20px; }
+    .content .tbody a {
+      width: 100%;
+      text-decoration: none; }
     .content .tbody ul {
       width: 100%;
       display: flex;
@@ -105,9 +108,9 @@ li {
           height: 228px;
           border: 1px solid #cccccc;
           margin-bottom: 10px; }
-        .content .tbody ul li a {
-          display: block;
-          text-decoration: none;
+        .content .tbody ul li img:hover {
+          border: 1px solid red; }
+        .content .tbody ul li p {
           color: #727171;
           font-size: 14px;
           margin-bottom: 10px; }
