--- a/sass/index.scss
+++ b/sass/index.scss
@@ -5,6 +5,9 @@
 li{
     list-style: none;
 }
+a{
+    text-decoration: none;
+}
 .head{
     width: 100%;
     height: auto;
@@ -389,6 +392,7 @@ table{
                 border-right: 1px solid #e0e0e1;    
                 & a{
                     display: block;
+                    text-decoration: none;
                     width: 370px;
                     height: 138px;
                     overflow: hidden;
@@ -434,6 +438,9 @@ table{
                width: auto;
                padding: 0px 40px 0px;
                border-right: 1px solid #dadadb;
+               & a{
+                   color: #333333;
+               }
             }
         }
     }
