--- a/sass/list.scss
+++ b/sass/list.scss
@@ -7,7 +7,7 @@ li{
 }
 .content{
     width: 1200px;
-    height: 1800px;
+    height: auto;
     // background:red ;
     margin: 0 auto;
     & .top{
@@ -105,6 +105,7 @@ li{
                 & li{
                    padding-left: 20px;
                    padding-right: 20px;
+                   cursor: pointer;
                 }
             }
         }
@@ -113,8 +114,11 @@ li{
         width: 100%;
         height: auto;
         margin: 0 auto;
-        background: pink;
         margin-top: 20px;
+        & a{
+            width: 100%;
+            text-decoration: none;
+        }
         & ul{
             width: 100%;
             display: flex;
@@ -130,9 +134,10 @@ li{
                     border: 1px solid #cccccc;
                     margin-bottom: 10px;
                 }
-                & a{
-                    display: block;
-                    text-decoration: none;
+                & img:hover{
+                    border: 1px solid red;  
+                }
+                & p{
                     color: #727171;
                     font-size: 14px;
                     margin-bottom: 10px;
