--- a/sass/bottom.scss
+++ b/sass/bottom.scss
@@ -1,10 +1,11 @@
 .footerAer{
     width: 100%;
     height: auto;
+    font-size: 12px;
+    color: #666666;
     & .footerTop{
         width: 100%;
         padding: 20px 0;
-        border-top: 1px solid #000000;
         & p{
             text-align: center;
             margin-bottom: 10px;
