--- a/css/jiesuan.css
+++ b/css/jiesuan.css
@@ -94,13 +94,27 @@
           display: none;
           z-index: 100; }
           #checkout .content .addr section .addform ol {
-            font-size: 14px; }
+            font-size: 14px;
+            position: relative; }
             #checkout .content .addr section .addform ol li {
               list-style: none;
               margin-bottom: 20px; }
               #checkout .content .addr section .addform ol li input {
                 width: 200px;
                 height: 20px; }
+            #checkout .content .addr section .addform ol #x {
+              display: block;
+              width: 16px;
+              height: 16px;
+              background: red;
+              text-align: center;
+              line-height: 16px;
+              color: #fff;
+              font-weight: bolder;
+              position: absolute;
+              right: 0;
+              top: -20px;
+              cursor: pointer; }
             #checkout .content .addr section .addform ol select {
               width: 120px; }
             #checkout .content .addr section .addform ol #baocun {
@@ -157,5 +171,28 @@
       text-align: right; }
       #checkout .zhifu h4 span {
         font-size: 26px; }
+
+.order {
+  width: 980px;
+  height: 60px;
+  margin-top: 10px;
+  text-align: right; }
+  .order div {
+    border: 1px solid #EBE5BB;
+    background: #FFFEF5;
+    width: 60%;
+    padding: 15px;
+    margin: 0 10px 0 0;
+    float: right;
+    text-align: center;
+    font-size: 14px; }
+  .order #btn {
+    width: 150px;
+    height: 40px;
+    float: right;
+    background: #870120;
+    border: none;
+    font-size: 18px;
+    color: #fff; }
 
 /*# sourceMappingURL=jiesuan.css.map */
