--- a/css/index.css
+++ b/css/index.css
@@ -101,13 +101,11 @@ a {
           top: 24px;
           display: none;
           z-index: 100;
-          padding-bottom: 20px; }
+          padding-bottom: 20px;
+          border-top: 5px solid #B81C21; }
           .head #nav ul li .dh a {
             display: block;
             padding-top: 15px; }
-      .head #nav ul li:hover .dh {
-        display: block;
-        border-top: 5px solid #B81C21; }
       .head #nav ul li a {
         text-decoration: none;
         color: #727171; }
