--- a/sass/head.scss
+++ b/sass/head.scss
@@ -136,10 +136,10 @@ li{
                 }
                 
             }
-            & li:hover .dh{
-                display: block;
-                border-top: 5px solid #B81C21;
-            }
+            // & li:hover .dh{
+            //     display: block;
+            //     border-top: 5px solid #B81C21;
+            // }
 
             & li a{
                 text-decoration: none;
